# permesi

./: .dockerignore  .gitignore  .justfile  404.html  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SETUP.md  TODO.md  architecture.html  firefox-dev.sh  genesis.json  index.html  introduction.html  permesi.excalidraw  permesi.json  print.html  searcher-c2a407aa.js  searchindex-72bef1b2.js  toc-7cb7a67d.js  toc.html  vault.Dockerfile
.cargo/: audit.toml
.justfiles/: core.just  docs_openapi.just  helpers.just  infra.just  schemathesis.just  services.just  vault.just  web.just
apps/web/: Cargo.toml  Dockerfile  README.md  Trunk.toml  build.rs  index.html  nginx.conf  package-lock.json  package.json  styles.css  tailwind.config.cjs
apps/web/assets/: app.css
apps/web/public/: _headers  config.js  manifest.webmanifest
apps/web/src/: app.rs  config.rs  lib.rs  main.rs
apps/web/src/components/: already_signed_in.rs  mod.rs
apps/web/src/components/layout/: admin_layout.rs  app_shell.rs  auth_layout.rs  mod.rs  public_layout.rs  sidebar.rs
apps/web/src/components/ui/: alert.rs  button.rs  elevation_prompt.rs  mod.rs  spinner.rs
apps/web/src/features/: mod.rs
apps/web/src/features/auth/: client.rs  crypto.rs  guards.rs  mod.rs  opaque.rs  state.rs  token.rs  types.rs  webauthn.rs
apps/web/src/features/me/: client.rs  mod.rs  types.rs
apps/web/src/features/orgs/: client.rs  types.rs
apps/web/src/features/passkeys/: client.rs  mod.rs  types.rs
apps/web/src/features/users/: client.rs  mod.rs  types.rs
apps/web/src/lib/: api.rs  build_info.rs  config.rs  errors.rs  mod.rs  theme.rs
apps/web/src/routes/: admin.rs  admin_claim.rs  dashboard.rs  health.rs  login.rs  me.rs  mod.rs  not_found.rs  signup.rs  verify_email.rs
apps/web/src/routes/me/: mod.rs  security.rs
apps/web/src/routes/me/security/: passkeys.rs
apps/web/src/routes/mfa/: challenge.rs  mod.rs  setup.rs
apps/web/src/routes/orgs/: detail.rs  list.rs  mod.rs  project.rs
apps/web/src/routes/users/: detail.rs  list.rs  mod.rs
contrib/: mfa-totp.sh
crates/admission_token/: Cargo.toml
crates/admission_token/src/: error.rs  jwks.rs  jwt.rs  lib.rs  paserk.rs  paseto.rs
crates/service_utils/: Cargo.toml
crates/service_utils/src/: globals.rs  lib.rs  tls.rs
crates/service_utils/src/vault/: database.rs  mod.rs  renew.rs
crates/service_utils/tests/: tls_defaults.rs  tls_full_bundle.rs
crates/test_support/: Cargo.toml
crates/test_support/src/: genesis.rs  lib.rs  postgres.rs  runtime.rs  vault.rs
crates/vault_client/: Cargo.toml
crates/vault_client/src/: lib.rs  transport.rs
crates/vault_client/tests/: agent_socket.rs  socket_permissions.rs
docs/: architecture.mmd  book.toml  custom.css
frontend/: admin-elevation.html  web.html
services/genesis/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  genesis.excalidraw
services/genesis/.github/actions-rs/: grcov.yml
services/genesis/.github/workflows/: deploy.yml
services/genesis/api_docs/: bruno.json  headers.bru  health.bru  token - CORS.bru  token 405.bru  token.bru  verify.bru
services/genesis/api_docs/environments/: dev.bru  prod.bru
services/genesis/openapi/schemathesis/: README.md  schemathesis.toml
services/genesis/sql/: schema.sql  seed_test_client.sql
services/genesis/src/: lib.rs  tls.rs
services/genesis/src/api/: admission.rs  mod.rs  openapi.rs
services/genesis/src/api/handlers/: headers.rs  health.rs  mod.rs  paserk.rs  root.rs  token.rs
services/genesis/src/cli/: globals.rs  mod.rs  start.rs  telemetry.rs
services/genesis/src/cli/actions/: mod.rs  run.rs  server.rs
services/genesis/src/cli/commands/: logging.rs  mod.rs  tls.rs  vault.rs
services/genesis/src/cli/dispatch/: mod.rs
services/genesis/src/genesis/: admission.rs  mod.rs
services/genesis/src/genesis/handlers/: headers.rs  health.rs  jwks.rs  mod.rs  paserk.rs  token.rs  verify.rs
services/genesis/src/vault/: database.rs  mod.rs  renew.rs  transit.rs
services/genesis/tests/: README.md  integration_token.rs  vault_socket_creds.rs
services/permesi/: Cargo.toml  Dockerfile  README.md
services/permesi/api_docs/: me.bru  orgs_create.bru
services/permesi/api_docs/environments/: Local.bru
services/permesi/openapi/: bruno.json  orgs_list.bru
services/permesi/openapi/schemathesis/: README.md
services/permesi/sql/: schema.sql
services/permesi/src/: lib.rs  tls.rs
services/permesi/src/api/: email.rs  mod.rs  openapi.rs
services/permesi/src/api/handlers/: health.rs  me.rs  me_webauthn.rs  mod.rs  orgs.rs  user_login.rs  user_register.rs  users.rs
services/permesi/src/api/handlers/auth/: admin.rs  admin_rate_limit.rs  admin_storage.rs  admin_token.rs  mod.rs  opaque_login.rs  opaque_signup.rs  passkeys.rs  principal.rs  rate_limit.rs  session.rs  session_kind.rs  state.rs  storage.rs  tests.rs  types.rs  utils.rs  verification.rs  zero_token.rs
services/permesi/src/api/handlers/auth/mfa/: integration_tests.rs  mod.rs  recovery.rs  storage.rs  webauthn.rs
services/permesi/src/api/handlers/auth/opaque/: login.rs  mod.rs  password.rs  reauth.rs  signup.rs  test_support.rs
services/permesi/src/api/handlers/orgs/: applications.rs  environments.rs  mod.rs  organizations.rs  projects.rs  slug.rs  storage.rs  tests.rs  types.rs
services/permesi/src/cli/: globals.rs  start.rs
services/permesi/src/cli/actions/: server.rs
services/permesi/src/cli/commands/: admission.rs  auth.rs  logging.rs  mod.rs  tls.rs  vault.rs
services/permesi/src/cli/dispatch/: mod.rs
services/permesi/src/permesi/: email.rs  mod.rs
services/permesi/src/permesi/handlers/: auth.rs  health.rs  mod.rs  user_login.rs  user_register.rs
services/permesi/src/totp/: crypto.rs  dek_manager.rs  mod.rs  models.rs  repo.rs  service.rs
services/permesi/src/vault/: database.rs  kv.rs  mod.rs  renew.rs  step_up.rs  transit.rs
services/permesi/src/webauthn/: mod.rs  models.rs  passkey_repo.rs  passkeys.rs  repo.rs  service.rs
services/permesi/tests/: integration_server.rs  vault_db_runtime.rs  vault_socket_creds.rs
(+97 files in other folders)
