[workspace]

resolver = "3"

members = [
  "services/permesi",
  "services/genesis",
  "apps/web",
  "crates/admission_token",
  "crates/vault_client",
  "crates/test_support",
]

[workspace.dependencies]
admission_token = { path = "crates/admission_token" }
vault_client = { path = "crates/vault_client" }
test_support = { path = "crates/test_support" }
argon2 = "0.5"
anyhow = "1"
axum = { version = "0.8", features = ["tracing"] }
base64 = "0.22"
base64ct = { version = "1.6.0", features = ["alloc"] }
blake2 = "0.10"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["std"] }
pasetors = "0.7"
once_cell = "1.21"
opaque-ke = { version = "3.0.0", features = ["argon2", "std"] }
clap = { version = "4", features = ["env"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["tls-roots", "tls", "grpc-tonic", "gzip-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
rand = "0.8.5"
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "0.10.3"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "ipnetwork",
    "uuid",
] }
temp-env = "0.3.6"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14" }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "request-id",
    "set-header",
    "propagate-header",
] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ulid = "1.2"
url = "2.5"
utoipa = { version = "5", features = ["axum_extras"] }
uuid = { version = "1.11", features = ["v1", "v4", "v7"] }
built = { version = "0.7", features = ["git2"] }
unicode-normalization = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
# groups
all = "deny"
pedantic = "deny"
nursery = { level = "allow", priority = -1 }

# categories
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# individual lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"
