[package]
name = "permesi_web"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
build = "build.rs"
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
built = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
leptos_dom = { version = "0.8" }
gloo-net = { version = "0.6", features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
base64 = { workspace = true }
opaque-ke = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
hex = "0.4"
sha2 = "0.10"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.86", features = ["AbortController", "AbortSignal", "History", "Location", "Storage", "UrlSearchParams", "Window", "CredentialsContainer", "PublicKeyCredential", "AuthenticatorAttestationResponse", "AuthenticatorAssertionResponse", "PublicKeyCredentialCreationOptions", "PublicKeyCredentialRequestOptions", "PublicKeyCredentialDescriptor", "PublicKeyCredentialUserEntity", "PublicKeyCredentialRpEntity", "PublicKeyCredentialParameters", "AuthenticatorSelectionCriteria", "PublicKeyCredentialType", "AuthenticatorTransport", "Navigator", "CredentialCreationOptions", "CredentialRequestOptions"] }
