[package]
name = "admission_token"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[lints]
workspace = true

[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
rsa = "0.9.6"
sha2 = { version = "0.10.8", features = ["oid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[dev-dependencies]
temp-env = "0.3.6"
