[package]
name = "admission_token"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[lints]
workspace = true

[dependencies]
base64ct = { workspace = true }
pasetors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
temp-env = { workspace = true }
