[package]
name = "admission_token"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
base64ct = { workspace = true }
pasetors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
temp-env = { workspace = true }
