[package]
name = "service_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
vault_client = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
http.workspace = true

[dev-dependencies]
serde_json = { workspace = true }
wiremock = "0.6"
rcgen = { workspace = true }
temp-env = { workspace = true }
uuid = { workspace = true }
