[package]
name = "test_support"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
testcontainers = { version = "0.26", features = ["http_wait"] }
tokio = { workspace = true }
uuid = { workspace = true }
