[package]
name = "test_support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
testcontainers = { version = "0.26", features = ["http_wait"] }
tokio = { workspace = true }
uuid = { workspace = true }
