[package]
name = "vault_client"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
