[package]
name = "vault_client"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
