[package]
name = "vault_client"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
temp-env = { workspace = true }
uuid = { version = "1", features = ["v4"] }
libc = "0.2.180"
