[package]
name = "genesis"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description = "Token Zero generator for permesi"
documentation = "https://github.com/permesi/genesis/blob/main/README.md"
homepage = "https://github.com/permesi/genesis"
repository = "https://github.com/permesi/genesis"
readme = "../../README.md"
keywords = ["password", "security", "token"]
categories = ["web-programming::http-server"]
license.workspace = true
build = "build.rs"

[[bin]]
name = "genesis-openapi"
path = "src/bin/openapi.rs"

[package.metadata.deb]
maintainer = "Team Permesi <team@permesi.dev>"
license-file = ["../../LICENSE"]
section = "net"
priority = "optional"
maintainer-scripts = "../../contrib/debian/genesis"
assets = [
    ["target/release/genesis", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/genesis/README.md", "644"],
    ["../../contrib/systemd/genesis.service", "lib/systemd/system/genesis.service", "644"],
    ["../../contrib/systemd/genesis.env.example", "usr/share/doc/genesis/genesis.env.example", "644"],
]

[lints]
workspace = true

[dependencies]
admission_token = { workspace = true }
vault_client = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true, features = ["tracing"] }
axum-server = { workspace = true }
chrono = "0.4"
clap = { workspace = true, features = ["env"] }
http = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["tls-roots", "tls"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
rand = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "ipnetwork",
    "uuid",
] }
temp-env = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "trace",
    "cors",
    "request-id",
    "set-header",
] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tonic = { workspace = true, features = ["tls-native-roots"] }
ulid = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }
uuid = { workspace = true, features = ["v1", "v4", "v7"] }
service_utils = { workspace = true }

[build-dependencies]
built = { workspace = true, features = ["git2"] }

[dev-dependencies]
hyper = { workspace = true, features = ["full"] }
rcgen = "0.13"
test_support = { workspace = true }
wiremock = "0.6"
