[package]
name = "permesi"
version = "0.1.6"
edition = "2024"
authors = ["Team Permesi <team@permesi.dev>"]
description = "Identity and Access Management"
documentation = "https://github.com/permesi/permesi/blob/main/README.md"
homepage = "https://permesi.dev"
repository = "https://github.com/permesi/permesi"
readme = "../../README.md"
keywords = ["password", "security", "iam", "identity", "access"]
categories = ["web-programming::http-server"]
license = "BSD-3-Clause"
build = "build.rs"

[lints]
workspace = true

[dependencies]
admission_token = { workspace = true }
vault_client = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.8", features = ["tracing"] }
base64 = { workspace = true }
base64ct = { version = "1.8.1", features = ["alloc"] }
clap = { workspace = true, features = ["env"] }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["tls-roots", "tls"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
rand = { workspace = true }
regex = "1.10"
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls-native-roots"] }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "ipnetwork",
    "uuid",
] }
temp-env = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "trace",
    "propagate-header",
    "set-header",
    "cors",
    "request-id",
] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
ulid = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
uuid = { workspace = true, features = ["v1", "v4", "v7"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }

[build-dependencies]
built = { workspace = true, features = ["git2"] }
