[package]
name = "permesi"
version.workspace = true
edition.workspace = true
publish = false
authors.workspace = true
description = "Identity and Access Management"
documentation = "https://github.com/permesi/permesi/blob/main/README.md"
homepage = "https://permesi.dev"
repository = "https://github.com/permesi/permesi"
readme = "../../README.md"
keywords = ["password", "security", "iam", "identity", "access"]
categories = ["web-programming::http-server"]
license.workspace = true
build = "build.rs"

[[bin]]
name = "permesi-openapi"
path = "src/bin/openapi.rs"

[package.metadata.deb]
maintainer = "Team Permesi <team@permesi.dev>"
license-file = ["../../LICENSE"]
section = "net"
priority = "optional"
maintainer-scripts = "../../contrib/debian/permesi"
assets = [
    ["target/release/permesi", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/permesi/README.md", "644"],
    ["../../contrib/systemd/permesi.service", "lib/systemd/system/permesi.service", "644"],
    ["../../contrib/systemd/permesi.env.example", "usr/share/doc/permesi/permesi.env.example", "644"],
]

[lints]
workspace = true

[dependencies]
admission_token = { workspace = true }
vault_client = { workspace = true }
argon2 = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.8", features = ["tracing"] }
base64 = { workspace = true }
base64ct = { version = "1.8.1", features = ["alloc"] }
clap = { workspace = true, features = ["env"] }
ed25519-dalek = { workspace = true }
once_cell = { workspace = true }
opaque-ke = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["tls-roots", "tls"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
regex = "1.10"
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "ipnetwork",
    "uuid",
    "chrono",
] }
temp-env = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tower = { workspace = true }
tower-http = { workspace = true, features = [
    "trace",
    "propagate-header",
    "set-header",
    "cors",
    "request-id",
] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
ulid = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }
uuid = { workspace = true, features = ["v1", "v4", "v7"] }

[dev-dependencies]
hyper = { workspace = true }
test_support = { workspace = true }
wiremock = "0.6"

[build-dependencies]
built = { workspace = true, features = ["git2"] }
